# pbstru

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CHANGELOG  CMakeLists.txt  LICENSE  README-cn.md  README.md  build.bat  build.sh  pbstru.sln  readme.md  types.xsd
.github/: ci.yaml
.github/workflows/: Build.yaml  ci.yaml
.workflow/: pipeline-20240909.yml
cmp/: Hello.pb.cc  Hello.pb.h  Hello.proto  encode_tag.c  orig.sh  reader.cc  run.sh  writer.cc
cmp/include/: hello.h  pbstru_comm.h
cmp/source/: hello.c  pbstru_comm.c  reader.cc  writer.cc
doc/: Protobuf编解码模块优化说明.docx
pbstru/: CMakeLists.txt  ReadMe.txt  build.bat  build.sh  cdb.options  cdb.proto  pbstru.cpp  pbstru.sln  pbstru.vcxproj.filters  rewrite_varint.txt  version.h
pbstru/pbstru/: cdb_ccc.options  pbstru.cpp  pbstru.vcxproj  version.h  version.h.tmp
pbstru/test_codec/: CMakeLists.txt  ReadMe.txt  stdafx.cpp  stdafx.h  test_codec.cbp  test_codec.cpp  test_codec.vcxproj  test_codec.vcxproj.filters
project/: project.xsd  uspp.prj
proto-files/: Http2Proxy.App2HttpDetect.proto  Http2Proxy.App2HttpReq.options  Http2Proxy.App2HttpReq.proto  Http2Proxy.App2HttpRes.options  Http2Proxy.App2HttpRes.proto  Http2Proxy.App2HttpSubscribe.options  Http2Proxy.App2HttpSubscribe.proto  Http2Proxy.Http2AppAck.proto  Http2Proxy.Http2AppReq.options  Http2Proxy.Http2AppReq.proto  Http2Proxy.Http2AppRes.options  Http2Proxy.Http2AppRes.proto  Http2Proxy.Http2AppSubscribeAck.options  Http2Proxy.Http2AppSubscribeAck.proto  Http2Proxy.Http2Common.proto  SBIGW.ClientReq.options  SBIGW.ClientReq.proto  SBIGW.ClientRsp.options  SBIGW.ClientRsp.proto  SBIGW.ClientSigTrace.proto  SBIGW.Comm.options  SBIGW.Comm.proto  SBIGW.DetectObjOpReq.options  SBIGW.DetectObjOpReq.proto  SBIGW.NrfClientAccessTokenReq.proto  SBIGW.NrfClientAccessTokenRsp.proto  SBIGW.NrfClientDeRegReq.proto  SBIGW.NrfClientDiscoveryReq.proto  SBIGW.NrfClientDiscoveryRsp.proto  SBIGW.NrfClientNotifyReq.proto  SBIGW.NrfClientRegReq.proto  SBIGW.NrfClientRegRsp.proto  SBIGW.NrfClientSubscribeReq.proto  SBIGW.NrfClientSubscribeRsp.proto  SBIGW.NrfClientUnSubscribeReq.proto  SBIGW.NrfClientUpdateSubReq.proto  SBIGW.NrfHeartBeat.options  SBIGW.NrfHeartBeat.proto  SBIGW.NrfHeartBeatAck.proto  SBIGW.NrfNotifyReg.options  (+26 more)
source/uspp/: schema.xsd  schema_00common.xml  schema_01wcdma.xml  schema_02cdma.xml  schema_03pcs.xml  schema_04shlr.xml  schema_05eir.xml  schema_06mnp.xml  schema_07hss.xml  schema_08aaa.xml  schema_09sd.xml  schema_standard.xml
src/: pbstru.cpp  version.h
test/: CMakeLists.txt  test.sh  test_codec.cpp
test_codec/: test_codec.cpp  test_codec.vcxproj.filters
view/: simple_view.xsd  uspp_simple.xml
